use env vars for db

--- a/k8s/yaml/cron.yaml
+++ b/k8s/yaml/cron.yaml
@@ -48,6 +48,26 @@ spec:
           value: 'stderr'
         - name: APP_URL
           value: 'uptime.local.parallax.dev'
+        - name: DB_HOST
+          valueFrom:
+            secretKeyRef:
+              name: 'mysql-credentials-{{ branch }}'
+              key: endpoint
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: 'mysql-credentials-{{ branch }}'
+              key: password
+        - name: DB_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: 'mysql-credentials-{{ branch }}'
+              key: username
+        - name: DB_DATABASE
+          valueFrom:
+            secretKeyRef:
+              name: 'mysql-credentials-{{ branch }}'
+              key: database
         imagePullPolicy: Always
         resources:
           limits:
