update config for web

--- a/k8s/yaml/web-deployment.yaml
+++ b/k8s/yaml/web-deployment.yaml
@@ -50,10 +50,7 @@ spec:
         - name: APP_URL
           value: 'uptime.local.parallax.dev'
         - name: DB_HOST
-          valueFrom:
-            secretKeyRef:
-              name: 'mysql-credentials'
-              key: endpoint
+          value: mysql-production.mysql
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -65,10 +62,7 @@ spec:
               name: 'mysql-credentials'
               key: username
         - name: DB_DATABASE
-          valueFrom:
-            secretKeyRef:
-              name: 'mysql-credentials'
-              key: database
+          value: uptime
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 1
