--- a/k8s/yaml/cron.yaml
+++ b/k8s/yaml/cron.yaml
@@ -31,7 +31,7 @@ spec:
           emptyDir: {}
       containers:
       - name: php
-        image: '{{ image_php_fpm }}'
+        image: '{{ image_php-fpm }}'
         command: ["/start-cron.sh"]
         env:
         - name: ENVIRONMENT
